test/let1_2.slq
// args: --run

def main(){
	x:=let{
		k:=2;
		forget(k,k); /// error
	} in k; /// error
	return x;
}
